assets/css/main.css
/* ... */
/* Make the tooltips respond to hover */
[tooltip]:hover::before,
[tooltip]:hover::after {
	display: block;
}

/* don't show empty tooltips */
[tooltip='']::before,
[tooltip='']::after {
	display: none !important;
}

/* FLOW: UP */
[tooltip]:not([flow])::before,
[tooltip][flow^="up"]::before {
	bottom: 100%;
	border-bottom-width: 0;
	border-top-color: var(--generic-grey-opacity-065);
}
[tooltip]:not([flow])::after,
[tooltip][flow^="up"]::after {
	bottom: calc(100% + 5px);
}
[tooltip]:not([flow])::before,
[tooltip]:not([flow])::after,
[tooltip][flow^="up"]::before,
[tooltip][flow^="up"]::after {
	left: 50%;
	transform: translate(-50%, -.5em);
}

/* FLOW: DOWN */
[tooltip][flow^="down"]::before {
	top: 100%;
	border-top-width: 0;
	border-bottom-color: var(--generic-grey-opacity-065);
}
[tooltip][flow^="down"]::after {
	top: calc(100% + 5px);
}
[tooltip][flow^="down"]::before,
[tooltip][flow^="down"]::after {
	left: 50%;
	transform: translate(-50%, .5em);
}

/* FLOW: LEFT */
[tooltip][flow^="left"]::before {
	top: 50%;
	border-right-width: 0;
	border-left-color: var(--generic-grey-opacity-065);
	left: calc(0em - 5px);
	transform: translate(-.5em, -50%);
}
[tooltip][flow^="left"]::after {
	top: 50%;
	right: calc(100% + 5px);
	transform: translate(-.5em, -50%);
}

/* FLOW: RIGHT */
[tooltip][flow^="right"]::before {
	top: 50%;
	border-left-width: 0;
	border-right-color: var(--generic-grey-opacity-065);
	right: calc(0em - 5px);
	transform: translate(.5em, -50%);
}
[tooltip][flow^="right"]::after {
	top: 50%;
	left: calc(100% + 5px);
	transform: translate(.5em, -50%);
}

/* KEYFRAMES */
@keyframes tooltips-vert {
	to {
		opacity: .9;
		transform: translate(-50%, 0);
	}
}

@keyframes tooltips-horz {
	to {
		opacity: .9;
		transform: translate(0, -50%);
	}
}

/* FX All The Things */
[tooltip]:not([flow]):hover::before,
[tooltip]:not([flow]):hover::after,
[tooltip][flow^="up"]:hover::before,
[tooltip][flow^="up"]:hover::after,
[tooltip][flow^="down"]:hover::before,
[tooltip][flow^="down"]:hover::after {
	animation: tooltips-vert 300ms ease-out forwards;
}

[tooltip][flow^="left"]:hover::before,
[tooltip][flow^="left"]:hover::after,
[tooltip][flow^="right"]:hover::before,
[tooltip][flow^="right"]:hover::after {
	animation: tooltips-horz 300ms ease-out forwards;
}




/* own scrollbar */
html {
	/* scrollbar firefox */
	scrollbar-color: var(--generic-white) var(--generic-mid-grey);
}

/* matches nothing */
/*
scrollbar {
	-moz-appearance: none !important;
	background: var(--generic-white) !important;
	width: 24px;
	scrollbar-color: var(--generic-white) var(--generic-mid-grey);
}
*/
:root {
	scrollbar-color: var(--generic-white) var(--generic-mid-grey);
	scrollbar-width: auto;
}

/* Note: The -webkit-scrollbar is not supported by Firefox or IE and Edge. */

::-webkit-scrollbar {
	/* width */
	width: 24px;

	-moz-transition: width 0.5s ease, opacity 0.5s ease;
	-webkit-transition: width 0.5s ease, opacity 0.5s ease;
	-ms-transition: width 0.5s ease, opacity 0.5s ease;
	transition: width 0.5s ease, opacity 0.5s ease;
}

::-webkit-scrollbar-track {
	/* Track */
	box-shadow: inset 0 0 5px var(--generic-mid-grey);
	border-radius: 8px;
}

::-webkit-scrollbar-thumb {
	/* Handle */
	background: var(--generic-mid-grey);
	border-radius: 10px;
}

::-webkit-scrollbar:hover {

}

::-webkit-scrollbar-track-piece {
	/* not handle on */
	background: var(--generic-white);
}

/* alert messages */
@media only screen and (max-width: 767px) {
	/* CSS styles for mobile devices */
	.info, .warning, .error {
		width: 100px;
		min-width: 90%;
		max-width: 99%;
		position: fixed;
		left: 2%;
	}
}
@media only screen and (min-width: 768px) and (max-width: 1023px) {
	/* CSS styles for tablets */
	.info, .warning, .error {
		width: 100px;
		min-width: 80%;
		max-width: 98%;
		position: fixed;
		left: 2%;
	}
}
@media only screen and (min-width: 1024px) and (max-width: 1279px) {
	/* CSS styles for small desktops */
	.info, .warning, .error {
		width: 100px;
		min-width: 60%;
		max-width: 97%;
		position: fixed;
		left: 2%;
	}
}
@media only screen and (min-width: 1280px) {
	/* CSS styles for large desktops */
	.info, .warning, .error {
		width: 100px;
		min-width: 50%;
		max-width: 96%;
		position: fixed;
		left: 2%;
	}
}

.info, .warning, .error {
	top: 0;
	background: var(--generic-body-back);
	opacity: var(--error-opacity);
	display: none;
	outline-style: double;
	-moz-transition: transform 0.5s ease, opacity 0.5s ease;
	-webkit-transition: transform 0.5s ease, opacity 0.5s ease;
	-ms-transition: transform 0.5s ease, opacity 0.5s ease;
	transition: transform 0.5s ease, opacity 0.5s ease;
	box-shadow: 0 0 100px black;
	z-index: 10005;
}

.info h3, .warning h3, .error h3 {
	line-height: 1;
	font-size: 2em;
	font-weight: bolder;
	text-align: center;
}

.alert {
	-webkit-user-select: none; /* Safari */
	-ms-user-select: none; /* IE 10 and IE 11 */
	user-select: none; /* Standard syntax */
}

.field-icon {
	float: right;
	margin-left: -10px;
	right: 0.7em;
	margin-top: -1.8em;
	position: relative;
	z-index: 2;
}

a > p {
	border: var(--generic-grey-opacity-03);
	border-style: groove;
	border-width: thin;
	line-height: 2em;
}

input:-webkit-autofill{
	background-color: var(--generic-body-back) !important;
	-webkit-box-shadow: 0 0 25px 25px var(--generic-body-back) inset !important;
	background-clip: content-box !important;
}
/* ... */

